Fixed some more layout issues on Entry view

--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -53,6 +53,7 @@ ul.info
   clear both
   margin 0
   list-style none
+  max-width 600px
 
 ul.info > li
   display inline-block
@@ -70,3 +71,9 @@ dd
 
 #carousel-1
   max-width 600px
+
+.yes
+  color green
+
+.no
+  color red
